base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: hello
  template:
    metadata:
      labels:
        deployment: hello
    spec:
      containers:
      - name: hello-container
        image: quay.io/alpaslank/monopole-hello:1
        command: ["/hello",
                  "--port=8080"]
        ports:
        - containerPort: 8080
