base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-service
spec:
  selector:
    deployment: hello
  ports:
  - protocol: TCP
    port: 8666
    targetPort: 8080
