base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello
  labels:
    app: hello
spec:
  to:
    kind: Service
    name: hello-service
